@@ -1,3 +1,7 @@
+2008-03-04  Don Porter	<dgp@users.sourceforge.net>
+
+	* tests/execute.test (6.3,4):	Added tests for Bug 1899164].
+
 2008-03-03  Reinhard Max  <max@suse.de>
 
 	* unix/tclUnixChan.c: Fix mark and space parity on Linux, which
